--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ dj3-cloudinary-storage==0.0.6
 Django==3.2.19
 gunicorn==20.1.0
 idna==3.4
-psycopg==3.1.9
+psycopg2==2.9.6
 pytz==2023.3
 requests==2.30.0
 six==1.16.0
